--- a/Twitter/pom.xml
+++ b/Twitter/pom.xml
@@ -15,6 +15,11 @@
   </properties>
 
   <dependencies>
+  	<dependency>
+    	<groupId>javax.validation</groupId>
+    	<artifactId>validation-api</artifactId>
+    	<version>2.0.1.Final</version>
+	</dependency>
     <dependency>
       <groupId>junit</groupId>
       <artifactId>junit</artifactId>
@@ -30,6 +35,11 @@
     	<groupId>mysql</groupId>
     	<artifactId>mysql-connector-java</artifactId>
     	<version>8.0.25</version>
+	</dependency>
+	<dependency>
+    	<groupId>com.github.javafaker</groupId>
+    	<artifactId>javafaker</artifactId>
+    	<version>1.0.1</version>
 	</dependency>
   </dependencies>
   
